add 2nd version and more

--- a/team.html
+++ b/team.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+   <title>
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
-   <p>This
+   <p>This is 1st paragraph
+   <p>This is 1st paragraph
 </body>
 </html>
